--- a/Ui/Ui.Desktop/MainWindow.xaml
+++ b/Ui/Ui.Desktop/MainWindow.xaml
@@ -39,11 +39,13 @@
         <Controls:WindowCommands ShowLastSeparator="False">
             <Controls:SplitButton
                 x:Name="CharacterDropDownSelector"
-                Margin="0" Click="CharacterDropDownSelector_Click"
+                Margin="0"
+                Click="CharacterDropDownSelector_Click"
                 HorizontalContentAlignment="Center"
                 DataContext="{Binding Character, Source={StaticResource Locator}}"
                 ItemsSource="{Binding CharacterList}"
                 SelectedItem="{Binding SelectedCharacter, Mode=TwoWay}"
+                MaxDropDownHeight="600"
                 DisplayMemberPath="Name"
                 Text="Charakter wechseln">
                 <Controls:SplitButton.Icon>
