--- a/Ui/Ui.Desktop/Resources/Styles/MiscStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/MiscStyle.xaml
@@ -2,4 +2,11 @@
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls">
     <Style TargetType="{x:Type Controls:WindowButtonCommands}" BasedOn="{StaticResource MahApps.Styles.WindowButtonCommands.Win10}" />
+    <Style TargetType="{x:Type TextBox}">
+        <Style.Resources>
+            <Style TargetType="{x:Type Border}">
+                <Setter Property="CornerRadius" Value="4" />
+            </Style>
+        </Style.Resources>
+    </Style>
 </ResourceDictionary>
