--- a/Ui/Ui.Desktop/Resources/Styles/ScrollBarStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/ScrollBarStyle.xaml
@@ -4,38 +4,51 @@
     <ControlTemplate x:Key="ScrollViewerHorizontalOnTopTemplate" TargetType="{x:Type ScrollViewer}">
         <Grid x:Name="Grid" Background="{TemplateBinding Background}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" MinWidth="17" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" MinHeight="17"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto" MinHeight="17" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Rectangle x:Name="Corner" 
-                    Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" 
-                    Grid.Column="1" Grid.Row="0"/>
-            <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" Margin="{TemplateBinding Padding}" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Grid.Column="0" Grid.Row="1" CanContentScroll="{TemplateBinding CanContentScroll}" CanHorizontallyScroll="False" CanVerticallyScroll="False"/>
-            <ScrollBar x:Name="PART_VerticalScrollBar" 
-                    Cursor="Arrow" 
-                    Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" 
-                    Grid.Column="1" Grid.Row="1" 
-                    AutomationProperties.AutomationId="VerticalScrollBar" 
-                    Maximum="{TemplateBinding ScrollableHeight}" 
-                    Minimum="0" 
-                    Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" 
-                    ViewportSize="{TemplateBinding ViewportHeight}"/>
-            <ScrollBar x:Name="PART_HorizontalScrollBar" 
-                    Cursor="Arrow" 
-                    Grid.Column="0" 
-                    AutomationProperties.AutomationId="HorizontalScrollBar" 
-                    Maximum="{TemplateBinding ScrollableWidth}" 
-                    Minimum="0" 
-                    Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" 
-                    Orientation="Horizontal" 
-                    ViewportSize="{TemplateBinding ViewportWidth}"/>
+
+            <Rectangle x:Name="Corner"
+                    Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+                    Grid.Column="1" Grid.Row="0" />
+
+            <ScrollContentPresenter
+                x:Name="PART_ScrollContentPresenter"
+                Margin="{TemplateBinding Padding}"
+                Content="{TemplateBinding Content}"
+                ContentTemplate="{TemplateBinding ContentTemplate}"
+                Grid.Column="0"
+                Grid.Row="1"
+                CanContentScroll="False"
+                CanHorizontallyScroll="True"
+                CanVerticallyScroll="True" />
+
+            <ScrollBar x:Name="PART_VerticalScrollBar"
+                    Cursor="Arrow"
+                    Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                    Grid.Column="1" Grid.Row="1"
+                    AutomationProperties.AutomationId="VerticalScrollBar"
+                    Maximum="{TemplateBinding ScrollableHeight}"
+                    Minimum="0"
+                    Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                    ViewportSize="{TemplateBinding ViewportHeight}" />
+
+            <ScrollBar x:Name="PART_HorizontalScrollBar"
+                    Cursor="Arrow"
+                    Grid.Column="0"
+                    AutomationProperties.AutomationId="HorizontalScrollBar"
+                    Maximum="{TemplateBinding ScrollableWidth}"
+                    Minimum="0"
+                    Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                    Orientation="Horizontal"
+                    ViewportSize="{TemplateBinding ViewportWidth}" />
         </Grid>
     </ControlTemplate>
-    
+
     <SolidColorBrush x:Key="StandardBorderBrush" Color="#888" />
     <SolidColorBrush x:Key="StandardBackgroundBrush" Color="#FFF" />
     <SolidColorBrush x:Key="HoverBorderBrush" Color="#DDD" />
